# mflower

./: .gitignore  .projectile  CMakeLists.txt  Makefile  ModuleDefinitions.cmake  build_and_run.sh  conanfile.txt  create_new_app_module.sh  create_new_lib_module.sh  module_sources.cmake  run.sh
libs/: CMakeLists.txt
libs/ranges/: ranges.hpp
mflower/: CMakeLists.txt
mflower/include/mflower/: config.hpp.in
mflower/main_app/: CMakeLists.txt
mflower/main_app/src/: main.cpp
mflower/main_app/tests/: CMakeLists.txt  main_app_test.cpp
src/: data.hpp  data_type.hpp  engine.cpp  engine.hpp  flow.cpp  graph.hpp  operations.cpp  operations.hpp  scope.cpp  scope.hpp  shape.cpp  shape.hpp  tensor.cpp  tensor.hpp  tensor_definitions.hpp
src/utils/: std_headers.hpp
templates/template_app_module/: CMakeLists.txt
templates/template_app_module/src/: main.cpp
templates/template_lib_module/: CMakeLists.txt
templates/template_lib_module/src/: main.cpp
templates/template_lib_module/tests/: CMakeLists.txt
